--- a/src/app/reports/report-cards/report-cards.component.scss
+++ b/src/app/reports/report-cards/report-cards.component.scss
@@ -86,7 +86,7 @@
   }
 
   .audio-player {
-    width: 10%;
+    width: 100px;
     justify-content: center;
 
     img {
